--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
    build:
       commands:
       - echo "Entered build phase"
-      - mvn install
+      - mvn clean install
       - echo "Build Completed on `date` "
    post_build:
       commands:
